--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - . ci/run.sh
 
 after_success:
+  - luarocks install luacov
   - luarocks install luacov-coveralls
-  - luacov-coveralls
+  - luacov-coveralls -e $TRAVIS_BUILD_DIR/lua_install
 
