downgrade lua to 5.1

--- a/test/docker/integration/Dockerfile
+++ b/test/docker/integration/Dockerfile
@@ -1,9 +1,10 @@
 ARG KONG_BASE_TAG
 FROM kong${KONG_BASE_TAG}
+# FROM kong:1.3-centos
 
-ENV LUA_PATH /usr/local/share/lua/5.4/?.lua;/usr/local/kong-oidc/?.lua;;
+ENV LUA_PATH /usr/local/share/lua/5.1/?.lua;/usr/local/kong-oidc/?.lua;;
 # For lua-cjson
-ENV LUA_CPATH /usr/local/lib/lua/5.4/?.so;;
+ENV LUA_CPATH /usr/local/lib/lua/5.1/?.so;;
 
 # Install unzip for luarocks, gcc for lua-cjson
 RUN yum install -y unzip gcc 
@@ -12,6 +13,8 @@ RUN luarocks install luaunit
 RUN luarocks install lua-cjson
 
 # Change openidc version when version in rockspec changes
-RUN luarocks install lua-resty-openidc 1.6.0
+RUN luarocks install lua-resty-openidc 1.7.2
 
 COPY . /usr/local/kong-oidc
+
+# ENV KONG_PLUGINS="bundled, oidc"
