--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ script:
   - . ci/setup.sh
   - . ci/run.sh
 
-after_success:
-  - luarocks install luacov-coveralls
-  - EXCLUDE_DIR=`echo $TRAVIS_BUILD_DIR/lua_install | sed 's/-/%-/'`
-  - luacov-coveralls -e $EXCLUDE_DIR
+# after_success:
+#   - luarocks install luacov-coveralls
+#   - luacov-coveralls
 
